# generalized-cosine-integrals-kpi

./: .gitignore  AUTHORS  CMakeLists.txt  LICENSE  README.md
include/: gcikpi.hpp
misc/: boost_1F2_failure.cpp
src/: gcikpi.cpp
test/py/: test-suit-1.ipynb  test-suit-2.ipynb
